<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">
        Sms2Email
    </string>
    <string name="main1">
        Diese Applikation sendet alle empfangenen SMS an folgende
        Email Empfänger:
    </string>
    <string name="main2">
        Die Emfängerliste können Sie über das Einstellungs-Menü
        ändern.
    </string>
    <string name="main3">
        Das Versenden der Email funktioniert momentan nur über ein
        Googlemail Konto. Dieses Konto können Sie ebenfalls in den
        Einstellungen angeben.
    </string>
    <string name="no_address_specified">
        Keine Adresse angegeben!
    </string>
    <string name="receiver">
    	Empfänger
    </string>
    <string name="sender">
    	Absender
    </string>
    <string name="email_address">
        Email Empfänger
    </string>
    <string name="email_address_summary">
    	Email Adresse des Empfängers
    </string>
    <string name="google_address">
        Googlemail Absender
    </string>
    <string name="google_address_summary">
    	Email Adresse des Googlemail Kontos
    </string>
    <string name="google_password">
        Googlemail Passwort
    </string>
    <string name="google_password_summary">
    	Passwort für das Googlemail Konto
    </string>
    <string name="config">
        Einstellungen
    </string>
    <string name="test">
        Testmail
    </string>
    <string name="ok">
        OK
    </string>
    <string name="cancel">
        Abbruch
    </string>
</resources>
