<?xml version="1.0" encoding="utf-8"?>

<TableLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/layout_config"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent">
    
    <TextView
        android:text="@string/email_address"
        android:textSize="18sp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />
        
    <EditText
        android:id="@+id/edit_email_address"
        android:text="@string/no_address_specified"
        android:inputType="textEmailAddress"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

    <TextView
        android:text="@string/google_address"
        android:textSize="18sp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />
        
    <EditText
        android:id="@+id/edit_google_address"
        android:text="@string/no_address_specified"
        android:inputType="textEmailAddress"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

    <TextView
        android:text="@string/google_password"
        android:textSize="18sp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />
        
    <EditText
        android:id="@+id/edit_google_password"
        android:text="@string/no_address_specified"
        android:inputType="textPassword"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

</TableLayout>
