<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/layout_main"
    android:orientation="vertical"
	android:layout_gravity="center_horizontal"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    >

	<ImageView
		android:src="@drawable/sms2email_main"
		android:layout_gravity="center_horizontal"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
	/>
    
    <TextView  
        android:layout_width="wrap_content" 
        android:layout_height="wrap_content" 
		android:layout_gravity="center_horizontal"
		android:layout_marginBottom="10sp"
        android:text="@string/main1"
    />
    
    <TextView  
        android:id="@+id/email_address"
        android:text="@string/no_address_specified"
        android:textSize="18sp"
		android:layout_gravity="center_horizontal"
        android:layout_width="wrap_content" 
        android:layout_height="wrap_content" 
    />
    
    <TextView  
        android:text="@string/main2"
		android:layout_gravity="center_horizontal"
		android:layout_marginTop="10sp"
        android:layout_width="wrap_content" 
        android:layout_height="wrap_content" 
    />
</LinearLayout>
